logs/cnr-server.log
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Cors-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cnr'...
Listing './lib/python3.5/site-packages/cnr/api'...
Listing './lib/python3.5/site-packages/cnr/api/impl'...
Listing './lib/python3.5/site-packages/cnr/models'...
Compiling './lib/python3.5/site-packages/cnr/models/db_base.py'...
***   File "./lib/python3.5/site-packages/cnr/models/db_base.py", line 49
    print "%s/%s  restored-channel: %s" % (str(i), str(size), channel.name)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cnr/models/kv'...
Listing './lib/python3.5/site-packages/cnr/models/kv/etcd'...
Listing './lib/python3.5/site-packages/cnr/models/kv/filesystem'...
Listing './lib/python3.5/site-packages/cnr/models/kv/redis'...
Listing './lib/python3.5/site-packages/cnr/tests'...
Listing './lib/python3.5/site-packages/cnr/tests/data'...
Listing './lib/python3.5/site-packages/cnr/tests/data/bad_manifest'...
Listing './lib/python3.5/site-packages/cnr/tests/data/docker-compose'...
Listing './lib/python3.5/site-packages/cnr/tests/data/docker-compose/templates'...
Listing './lib/python3.5/site-packages/cnr/tests/data/kube-ui'...
Listing './lib/python3.5/site-packages/cnr/tests/data/kube-ui/templates'...
Listing './lib/python3.5/site-packages/cnr/tests/data/responses'...
Compiling './lib/python3.5/site-packages/cnr/tests/test_models.py'...
***   File "./lib/python3.5/site-packages/cnr/tests/test_models.py", line 80
    assert blob.size == 778L
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cnr_server-0.2.7.post2.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/etcd'...
Listing './lib/python3.5/site-packages/etcd/tests'...
Listing './lib/python3.5/site-packages/etcd/tests/integration'...
Listing './lib/python3.5/site-packages/etcd/tests/unit'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_cors'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/python_etcd-0.4.5.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/semantic_version'...
Listing './lib/python3.5/site-packages/semantic_version-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
